--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -14,6 +14,25 @@
 }
 body {
   background: #FFFFFF;
+  
+  header {
+    background-color: #FF0000;
+    padding: 10px;
+    h1 {
+      text-align: center;
+      text-transform: uppercase;
+      color: white;
+      font-size: 1.7rem;
+      font-weight: 700;
+      padding-bottom: 14px;
+
+      span {
+        text-decoration: underline; 
+      }
+    }
+  }
 }
 
+
 @import './header.scss';
+@import './components/first';
