--- a/src/assets/styles/components/_first.scss
+++ b/src/assets/styles/components/_first.scss
@@ -1,3 +1,73 @@
 .first {
-    background-image: url("https://ritboxemcasa.com.br/wp-content/uploads/2022/11/background-1.png");
+  padding: 50px 0 20px 0;
+  background-image: url("https://ritboxemcasa.com.br/wp-content/uploads/2022/11/background-1.png");
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+      margin-top: 12px;
+      font-size: 3.5rem;
+      text-transform: uppercase;
+      color: white;
+    }
+
+    .h1-fundo {
+      margin-top: 14px;
+      padding: 4px 12px;
+      background-image: linear-gradient(70deg,#d49d17 0,#856109 93%);
+      border-radius: 10px;
+    }
+
+    p {
+      color: white;
+      font-size: 1.9rem;
+      margin-bottom: 14px;
+      line-height: 1.5;
+      span {
+        color: #ffdb67;
+      }
+    }
+
+    iframe {
+      width: 100%;
+      max-width: 1000px;
+      height: 562px;
+      background-color: #E96310;
+      // backdrop-filter: blur(5px);
+      box-shadow: 0px 0px 100px -13px #d49d17;
+    }
+
+    button {
+      margin: 20px 0 8px 0;
+      color: white;
+      text-transform: uppercase;
+      font-size: 2.8rem;
+      line-height: 1;
+      padding: 12px 24px;
+      border-radius: 30px;
+      background-image: linear-gradient(70deg,#d49d17 0,#856109 93%);
+    }
+  
+    .icones {
+      display: flex;
+
+      .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        img {
+          width: 77px;
+          height: 77px;
+        }
+        p {
+          width: 250px;
+          text-align: center;
+        }
+      }
+    }
+  }
 }
