--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -37,3 +37,5 @@ body {
 @import './header.scss';
 @import './components/first';
 @import './components/descont1';
+@import './components/fourthSection';
+
