--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -38,4 +38,4 @@ body {
 @import './components/first';
 @import './components/descont1';
 @import './components/fourthSection';
-
+@import './components/fifthSection';
