--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -23,6 +23,7 @@ $red-900: #521200;
 $font-1: 'Press Start 2P', cursive;
 $font-2: 'Lato', sans-serif;
 $font-3: 'PT Sans Caption', sans-serif;
+$font-4: 'Encode Sans', sans-serif;
 
 $screen-xxs : 320px; // Extra extra small screen / edge phone
 $screen-xs  : 710px; // Extra small screen / phone
