--- a/src/assets/styles/components/_first.scss
+++ b/src/assets/styles/components/_first.scss
@@ -1,7 +1,9 @@
 .first {
   padding: 50px 0 20px 0;
   background-image: url("https://ritboxemcasa.com.br/wp-content/uploads/2022/11/background-1.png");
-
+  background-color: #000;
+  background-position: top center;
+  background-size: cover;
   .container {
     display: flex;
     flex-direction: column;
