--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -42,3 +42,4 @@ body {
 @import './components/descont1';
 @import './components/fourthSection';
 @import './components/fifthSection';
+@import './components/sixthSection';
