--- a/src/assets/styles/components/_fifthSection.scss
+++ b/src/assets/styles/components/_fifthSection.scss
@@ -1,6 +1,15 @@
 .fifthSection {
   background: #000;
-
+  padding-top: 32px;
+  .svg{
+    position: absolute;
+    top: 0;
+    right: 35%;
+    svg{
+      width: 46px;
+      height: 23px;
+    }
+  }
   .words {
     text-align: center;
     margin-bottom: 30px;
