--- a/src/assets/styles/components/_first.scss
+++ b/src/assets/styles/components/_first.scss
@@ -4,6 +4,7 @@
   background-color: #000;
   background-position: top center;
   background-size: cover;
+
   .container {
     display: flex;
     flex-direction: column;
@@ -34,13 +35,19 @@
       }
     }
 
-    iframe {
+    .video {
       width: 100%;
       max-width: 1000px;
       height: 562px;
       background-color: #E96310;
       // backdrop-filter: blur(5px);
       box-shadow: 0px 0px 100px -13px #d49d17;
+
+      div {
+        height: inherit;
+        width: inherit;
+        z-index: 2;
+      }
     }
 
     button {
