--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -50,7 +50,7 @@ footer {
           font-weight: 800;
         }
       }
-      .enderoco{
+      .endereco{
         p{
           color: #fdc7ff;
           font-family: "Encode Sans",Sans-serif;
