--- a/src/assets/styles/components/_second.scss
+++ b/src/assets/styles/components/_second.scss
@@ -17,17 +17,22 @@
       text-align: center;
       margin-bottom: 20px;
     }
-
-    .carrosel {
-      display: flex;
-      max-width: 1060px;
-      margin-bottom: 20px;
-      width: 100%;
+    .flow{
       overflow-x: hidden;
-
-      img {
-        width: 530px;
-        height: 535px;
+      .carrosel {
+        display: flex;
+        max-width: 1060px;
+        margin-bottom: 20px;
+        width: 100%;
+        flex-flow: row nowrap;
+        transition: transform 0.5s ease-in-out;
+        transform: translateX(0);
+  
+        img {
+          width: 530px;
+          height: 535px;
+          object-fit: cover;
+        }
       }
     }
 
