--- a/src/assets/styles/components/_faq.scss
+++ b/src/assets/styles/components/_faq.scss
@@ -2,6 +2,7 @@
   padding: 0;
   background-color: #570171;
   position: relative;
+  transition: 1s;
   .logo {
     position: relative;
     display: flex;
@@ -58,6 +59,7 @@
       margin-bottom: 150px;
 
       .question {
+        cursor: pointer !important;
         background-color: #6d11c8;
         display: flex;
         flex-direction: column;
@@ -67,9 +69,12 @@
         height: fit-content;
         border-radius: 11px;
         padding: 12px 0;
-        transition: 1s;
+        transition: 500ms;
+
+      
         
         &.rozinha {
+          transition: 500ms;
           background-color: #fe4596 !important;
         }
         
@@ -82,7 +87,6 @@
         }
 
         .textSection {
-          transition: 3s;
           display: none;
           background-color: white;
           width: 100%;
@@ -93,10 +97,6 @@
             transition: inherit;
             display: inherit;
             color: #000;
-
-            &:nth-last-child() {
-              padding-bottom: 30px;
-            }
           }
         }
       }
