--- a/src/assets/styles/components/_fifthSection.scss
+++ b/src/assets/styles/components/_fifthSection.scss
@@ -46,5 +46,8 @@
     justify-items: center;
     justify-content: center;
     align-items: center;
+    @media (max-width: $screen-xs) {
+      grid-template-columns: 1fr;
+    }
   }
 }
