--- a/src/assets/styles/components/_second.scss
+++ b/src/assets/styles/components/_second.scss
@@ -1,5 +1,5 @@
 .second {
-  padding: 50px 0 20px 0;
+  padding: 50px 20px 20px 0;
 
   .container {
     display: flex;
@@ -27,11 +27,19 @@
         flex-flow: row nowrap;
         transition: transform 0.5s ease-in-out;
         transform: translateX(0);
+        @media (max-width: $screen-xs) {
+          display: flex;
+          max-width: 300px;
+        }
   
         img {
           width: 530px;
           height: 535px;
           object-fit: cover;
+          @media (max-width: $screen-xs) {
+            width: 300px;
+            height: fit-content;
+          }
         }
       }
     }
