--- a/src/assets/styles/components/_seventSection.scss
+++ b/src/assets/styles/components/_seventSection.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
 
-
     h1 {
       margin-top: 12px;
       font-size: 4rem;
@@ -15,17 +14,27 @@
       text-align: center;
       margin-bottom: 20px;
     }
+    
+    .flow{
+      overflow-x: hidden;
+      flex-flow: row nowrap;
+      transition: transform 0.5s ease-in-out;
+      transform: translateX(0);
 
-    .carrosel {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      max-width: 1060px;
-      margin-bottom: 20px;
-      width: 100%;
-
-      img {
-        width: 297px;
-        height: 300px;
+      .carrosel {
+        display: flex;
+        max-width: 1060px;
+        margin-bottom: 20px;
+        width: 100%;
+        flex-flow: row nowrap;
+        transition: transform 0.5s ease-in-out;
+        transform: translateX(0);
+  
+        img {
+          width: 297px;
+          height: 300px;
+          object-fit: cover;
+        }
       }
     }
 
