--- a/src/assets/styles/components/_first.scss
+++ b/src/assets/styles/components/_first.scss
@@ -11,11 +11,21 @@
     justify-content: center;
     align-items: center;
 
+    img {
+      @media (max-width: 600px) {
+        width: 100%;
+      }
+    }
     h1 {
       margin-top: 12px;
       font-size: 3.5rem;
       text-transform: uppercase;
       color: white;
+      text-align: center;
+
+      @media (max-width: $screen-xs) {
+        font-size: 2.6rem;
+      }
     }
 
     .h1-fundo {
@@ -30,15 +40,20 @@
       font-size: 1.9rem;
       margin-bottom: 14px;
       line-height: 1.5;
+      text-align: center;
       span {
         color: #ffdb67;
+      }
+
+      @media (max-width: $screen-xs) {
+        font-size: 1.8rem;
       }
     }
 
     .video {
       width: 100%;
       max-width: 1000px;
-      height: 562px;
+      max-height: 562px;
       background-color: #E96310;
       // backdrop-filter: blur(5px);
       box-shadow: 0px 0px 100px -13px #d49d17;
@@ -63,17 +78,31 @@
   
     .icones {
       display: flex;
+      gap: 100px;
+
+      @media (max-width: $screen-md) {
+        gap: 60px;
+      }
+
+      @media (max-width: $screen-xs) {
+        gap: 20px;
+      }
+
+      @media (max-width: 500px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
 
       .box {
         display: flex;
         flex-direction: column;
         align-items: center;
+        max-width: 148px;
         img {
           width: 77px;
           height: 77px;
         }
         p {
-          width: 250px;
           text-align: center;
         }
       }
