--- a/src/assets/styles/components/_first.scss
+++ b/src/assets/styles/components/_first.scss
@@ -16,6 +16,7 @@
         width: 100%;
       }
     }
+
     h1 {
       margin-top: 12px;
       font-size: 3.5rem;
@@ -65,17 +66,20 @@
       }
     }
 
-    button {
+    a {
+      max-width: 708px;
+      text-align: center;
       margin: 20px 0 8px 0;
       color: white;
+      font-weight: 700;
       text-transform: uppercase;
-      font-size: 2.8rem;
+      font-size: 2.4rem;
       line-height: 1;
-      padding: 12px 24px;
-      border-radius: 30px;
-      background-image: linear-gradient(70deg,#d49d17 0,#856109 93%);
+      padding: 20px 40px;
+      border-radius: 20px;
+      background-image: linear-gradient(180deg,#e7ac1c 0%,#856109 100%);
     }
-  
+    
     .icones {
       display: flex;
       gap: 100px;
@@ -98,10 +102,12 @@
         flex-direction: column;
         align-items: center;
         max-width: 148px;
+        
         img {
           width: 77px;
           height: 77px;
         }
+
         p {
           text-align: center;
         }
