--- a/src/assets/styles/components/_third.scss
+++ b/src/assets/styles/components/_third.scss
@@ -8,6 +8,10 @@
     width: 100%;
     // transform: rotate(180deg);
     fill: #FFF;
+
+    @media (max-width: $screen-xs) {
+      height: 60px;
+    }
   }
   .container {
     display: flex;
@@ -22,9 +26,10 @@
     .content {
       display: flex;
       gap: 30px;
-      @media (max-width: $screen-xs) {
-        display: grid;
-        grid-template-columns: 1fr;
+      @media (max-width: $screen-md) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
 
       .left {
@@ -38,15 +43,18 @@
             color: #FFFF99;
           }
         }
+
         .none{
           margin: 0 auto;
           display: none;
           width: 460px;
           height: 550px;
-          @media (max-width: $screen-xs) {
+
+          @media (max-width: $screen-md) {
             display: block;
           }
         }
+        
         img {
           width: 100%;
           text-align: center;
@@ -74,7 +82,7 @@
       }
 
       .right {
-        @media (max-width: $screen-xs) {
+        @media (max-width: $screen-md) {
           display: none;
         }
         img {
