--- a/src/assets/styles/components/_descont1.scss
+++ b/src/assets/styles/components/_descont1.scss
@@ -1,6 +1,7 @@
 .descont1 {
   width: 100%;
   max-width: 100%;
+  padding: 64px 24px 0;
   .botao {
     display: flex;
     flex-direction: column;
@@ -8,19 +9,31 @@
     justify-items: center;
     align-items: center;
     
-    gap: 10px;
+    gap: 24px;
+
     h3{
       color: #000;
       font-family: "Encode Sans",Sans-serif;
-      font-weight: 600;
+      font-weight: 700;
       font-size: 16px;
+      text-align: center;
+
+      &.menor {
+        font-weight: 400;
+      }
+
+      span {
+        font-size: 2.8rem;
+      }
     }
-    a{
+
+    a {
       background-image: linear-gradient(180deg,#00ff23 0,#00cd0d 100%);
+      box-shadow: 0px 5px 7px 0px rgb(0 0 0 / 50%);;
       border-radius: 180px;
       padding: 24px 54px 20px 50px;
   
-      font-family: "Encode Sans",Sans-serif;
+      font-family: "Encode Sans", Sans-serif;
       font-size: 19px;
       font-weight: 700;
       text-transform: uppercase;
@@ -28,21 +41,37 @@
       line-height: 1.1em;
       letter-spacing: 1.1px;
       fill: #000;
-      color: #000;
+      color: #FFF;
       width: 500px;
       align-items: center;
       text-align: center;
+
+      @media (max-width: $screen-xs) {
+        width: 100%;
+        font-size: 1.2rem;
+
+      }
     }
   }
+
   .icones{
     width: 100%;
     max-width: 100%;
+    margin-top: 30px;
+    
     display: flex;
     justify-content: center;
-    justify-items: center;
     align-items: center;
     gap: 110px;
-    margin-top: 30px;
+
+    @media (max-width: $screen-sm) {
+      gap: 30px;
+    }
+
+    @media (max-width: 500px) {
+      flex-direction: column;
+    }
+
 
     .box{
       img{
