--- a/src/assets/styles/components/_fifthSection.scss
+++ b/src/assets/styles/components/_fifthSection.scss
@@ -21,8 +21,13 @@
         font-size: 42px;
         font-weight: 700;
         text-transform: uppercase;
+        
         span {
           text-decoration: underline;
+        }
+
+        @media (max-width: $screen-sm) {
+          font-size: 2.6rem;
         }
       }
     }
@@ -30,8 +35,11 @@
       color: #fff;
       font-family: "Encode Sans",Sans-serif;
       font-size: 18px;
-      text-decoration: underline;
       margin-bottom: 5px;
+
+      @media (max-width: $screen-sm) {
+        font-size: 1.6rem;
+      }
     }
     p{
       color: #fff;
@@ -46,8 +54,20 @@
     justify-items: center;
     justify-content: center;
     align-items: center;
-    @media (max-width: $screen-xs) {
+    @media (max-width: 880px) {
       grid-template-columns: 1fr;
+      width: 100%;
+    }
+
+    .box {
+      @media (max-width: 880px) {
+        width: 100%;
+      }
+      img {
+        @media (max-width: 880px) {
+          width: 100%;
+        }
+      }
     }
   }
 }
