--- a/src/assets/styles/components/_fourthSection.scss
+++ b/src/assets/styles/components/_fourthSection.scss
@@ -22,6 +22,11 @@
         font-weight: 400;
         line-height: 1.2em;
         letter-spacing: 0.06em;
+        margin-bottom: 10px;
+
+        @media (max-width: $screen-sm) {
+          font-size: 2.4rem;
+        }
       }
     }
     .words2{
