--- a/src/assets/styles/components/_second.scss
+++ b/src/assets/styles/components/_second.scss
@@ -18,28 +18,95 @@
       margin-bottom: 20px;
     }
     .flow{
-      overflow-x: hidden;
       .carrosel {
+        position: relative;
+        height: 540px;
         display: flex;
-        max-width: 1060px;
+        max-width: 520px;
         margin-bottom: 20px;
         width: 100%;
-        flex-flow: row nowrap;
-        transition: transform 0.5s ease-in-out;
-        transform: translateX(0);
+        overflow: hidden;
+        input{
+          display: none;
+        }
         @media (max-width: $screen-xs) {
           display: flex;
           max-width: 300px;
         }
-  
-        img {
-          width: 530px;
-          height: 535px;
-          object-fit: cover;
-          @media (max-width: $screen-xs) {
-            width: 300px;
-            height: fit-content;
+        .slide{
+          position: relative;
+          // &.first-slide{
+          // }
+          img {
+            width: 530px;
+            height: 535px;
+            object-fit: cover;
+            @media (max-width: $screen-xs) {
+              width: 300px;
+              height: fit-content;
+            }
           }
+        }
+
+
+
+        // .navigattion-auto{
+        // }
+        #radio1:checked ~ .first-slide{
+          margin-left: 0;
+        }
+        #radio2:checked ~ .first-slide{
+          margin-left: -100%;
+        }
+        #radio3:checked ~ .first-slide{
+          margin-left: -200%;
+        }
+        #radio4:checked ~ .first-slide{
+          margin-left: -300%;
+        }
+        #radio5:checked ~ .first-slide{
+          margin-left: -400%;
+        }
+
+        .navigation-auto div{
+          border: 2px solid #f50b4d;
+          padding: 5px;
+          border-radius: 10px;
+          cursor: pointer;
+          transition: 1s;
+        }
+        .navigation-auto{
+          position: absolute;
+          width: 530px;
+          top: 32px;
+          display: flex;
+          justify-content: center;
+          gap: 20px;
+
+        }
+        #radio1:checked ~ .navigation-auto .auto-btn1{
+          background-color: yellow;
+        }
+      }
+      .manual-navigation{
+        position: absolute;
+        width: 530px;
+        top: 160px;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        .manual-btn{
+          border: 2px solid #f50b4d;
+          padding: 5px;
+          border-radius: 10px;
+          cursor: pointer;
+          transition: 1s;
+          :hover{
+            background-color: yellow;
+          }
+        }
+        .manual-btn:hover{
+          background-color: yellow;
         }
       }
     }
