--- a/src/assets/styles/components/_faq.scss
+++ b/src/assets/styles/components/_faq.scss
@@ -23,14 +23,14 @@
       }
     }
 
-    span {
-      z-index: 2;
-      position: absolute;
-      color: white;
-      font-size: 2.8rem;
+    // span {
+    //   z-index: 2;
+    //   position: absolute;
+    //   color: white;
+    //   font-size: 2.8rem;
 
-      margin-top: 262px;
-    }
+    //   margin-top: 262px;
+    // }
   }
   .container {
     display: flex;
